package com.mycompany.lapr2_interfacegrafica.model;

public class Freelancer {

}
